# ichatbio-pdf-reader-agent

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
langchain_weather/: README.md  agent.py  context.py  util.py
src/: __main__.py  agent.py  context.py  pdf_helpers.py  pdf_langchain_tools.py  pdf_models.py  pdf_prompts.py  pdf_reader.py  pdf_reader_unstructured.py  pdf_sessions.py
src/output_unstructured/: extracted_text.txt
src/utils/: tools.py
tests/: conftest.py  test_agent.py
tests/evals/: conftest.py  mocks.py
tests/evals/eval_assistant/: conftest.py  eval_assistant.py  test_pdf_reader_agent.py
tests/evals/eval_assistant/test_sets/: generate_expert_requests_pdf_reader.yaml
