[project]
name = "ichatbio-pdf-reader-agent"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "ichatbio-sdk~=0.2.1",
    "openai>=1.109.1",
    "pydantic~=2.11.4",
    "instructor>=1.11.3",
    "dotenv~=0.9.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "uvicorn~=0.34.3",
    "pypdf~=5.1.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm",
    "requests~=2.32.0",
    # "unstructured[pdf]",
    "pillow"
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests", "../ichatbio-backend/backend"]
log_cli = true
log_cli_level = "INFO"